--- a/SPRINT/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/SPRINT/en.lproj/MainStoryboard_iPhone.storyboard
@@ -15,7 +15,7 @@
                         <sections>
                             <tableViewSection headerTitle="User Profile" footerTitle="Please enter your Compuware Network ID ex. &quot;amiqxr3&quot;" id="7YC-ld-VnG">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="oah-vq-fXR">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="oah-vq-fXR">
                                         <rect key="frame" x="0.0" y="46" width="320" height="46"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
