--- a/SPRINT/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/SPRINT/en.lproj/MainStoryboard_iPhone.storyboard
@@ -309,11 +309,11 @@
             <objects>
                 <viewController id="LXb-Ua-Ruf" customClass="CPWRPrintViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="MeQ-bu-9mn">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="colorprinter.png" id="4PP-xP-3ht">
-                                <rect key="frame" x="104" y="117" width="113" height="119"/>
+                                <rect key="frame" x="104" y="91" width="113" height="119"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="ZU0-ry-qMe">
                                 <rect key="frame" x="20" y="360" width="280" height="44"/>
@@ -554,8 +554,8 @@ w05p02compuware.com</string>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="26"/>
+        <segue reference="Rj7-jE-eFd"/>
+        <segue reference="6hX-KB-0bJ"/>
         <segue reference="Dxb-5k-Mf7"/>
-        <segue reference="sxB-3R-NMm"/>
-        <segue reference="Pwj-OB-zKc"/>
     </inferredMetricsTieBreakers>
 </document>
